crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__schema_stmt_recovery_26.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests ::\nparsing_module_string(r#\"\nschema A:\n    check: \n        @\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: Schema(
                SchemaStmt {
                    doc: None,
                    name: Node {
                        node: "A",
                        filename: "",
                        line: 2,
                        column: 7,
                        end_line: 2,
                        end_column: 8,
                    },
                    parent_name: None,
                    for_host_name: None,
                    is_mixin: false,
                    is_protocol: false,
                    args: None,
                    mixins: [],
                    body: [],
                    decorators: [],
                    checks: [
                        Node {
                            node: CheckExpr {
                                test: Node {
                                    node: Missing(
                                        MissingExpr,
                                    ),
                                    filename: "",
                                    line: 4,
                                    column: 8,
                                    end_line: 4,
                                    end_column: 9,
                                },
                                if_cond: None,
                                msg: None,
                            },
                            filename: "",
                            line: 4,
                            column: 8,
                            end_line: 4,
                            end_column: 8,
                        },
                        Node {
                            node: CheckExpr {
                                test: Node {
                                    node: Missing(
                                        MissingExpr,
                                    ),
                                    filename: "",
                                    line: 4,
                                    column: 9,
                                    end_line: 4,
                                    end_column: 9,
                                },
                                if_cond: None,
                                msg: None,
                            },
                            filename: "",
                            line: 4,
                            column: 9,
                            end_line: 4,
                            end_column: 9,
                        },
                    ],
                    index_signature: None,
                },
            ),
            filename: "",
            line: 2,
            column: 0,
            end_line: 4,
            end_column: 9,
        },
    ],
    comments: [],
}
